* Fixed photometry analysis of stars with negative pixels around them
* Fixed dates keywords in sum and min/max algorithms
* Fixed FITS header preservation on RGB composition
* Fixed possible FITSEQ infinite loop and inconsistent numbering caused by hidden files in conversion
* Fixed sequence closing in script processing after each command
* Fixed opening of scientific FITS cube files

siril 1.0.7
xx/xx/22

* Fixed bug when saving 16bits signed FITS images
* Fixed internationalization in siril-cli
* Fixed subsky command success status

siril 1.0.6
10/18/22

* Fixed crash on opening a malformed SER
* Fixed crash in savetif
* Fixed crash in polynomial background extraction when not enough sample were set
* Fixed bug in iif where no parameters could be used
* Fixed crash in seqstat when some images were deselected
* Fixed crash in star detection when large star was close to border
* Fixed bad behaviour of asinh blackpoint with monochrome/32bits images
* Fixed bug in PixelMath with negate values
* Fixed bug in SIMBAD request when object name contains '+'
* Fixed bug in rotational gradient

siril 1.0.5
09/09/22

* Fixed bug in eyedropper feature with 16bits images
* Added button to see original image in background extraction
* Fixed bug introduced in 1.0.4 with one pixel shift when registering meridian flipped images
* Fixed GAIA catalog parser

siril 1.0.4
09/02/22

* Fixed selected area for flat autonormalisation calc
* Fixed wrong initialization in polynomial background extraction
* Fixed cold pixels rejection in GESDT stacking
* Fixed x and y position in PSF and star detection
* Fixed RGB pixel display where Green and Blue were swapped
* Fixed random crash in Pixel Math
* Improved wcs import when formalism used is deprecated (CROTA + CDELT)
* Added dropper icon to set SP easily in GHT tool

siril 1.0.3
06/28/22

* Fixed memory leak in PixelMath
* Fixed memory leak in SER preview
* Fixed error in seqsubsky
* Fixed the start of two scripts from @ in succession