@@ -58,6 +58,7 @@ preferences pref_init = {
 	.rgb_aladin = FALSE,
 	.copyright = NULL,
 	.starnet_dir = NULL,
+	.gnuplot_dir = NULL,
 	.starfinder_conf = { // starfinder_conf
 		.radius = DEF_BOX_RADIUS,
 		.sigma = 1.0,
@@ -181,6 +182,8 @@ void free_preferences(preferences *pref) {
 	pref->copyright = NULL;
 	g_free(pref->starnet_dir);
 	pref->starnet_dir = NULL;
+	g_free(pref->gnuplot_dir);
+	pref->gnuplot_dir = NULL;
 	g_free(pref->lang);
 	pref->lang = NULL;
 	g_slist_free_full(pref->gui.script_path, g_free);
@@ -223,6 +226,7 @@ struct settings_access all_settings[] = {
 	{ "core", "rgb_aladin", STYPE_BOOL, N_("add CTYPE3='RGB' in the FITS header"), &com.pref.rgb_aladin },
 	{ "core", "copyright", STYPE_STR, N_("user copyright to put in file header"), &com.pref.copyright },
 	{ "core", "starnet_dir", STYPE_STR, N_("directory of the starnet++ installation"), &com.pref.starnet_dir },
+	{ "core", "gnuplot_bin", STYPE_STR, N_("path of the gnuplot binary"), &com.pref.gnuplot_dir },
 
 	{ "starfinder", "focal_length", STYPE_DOUBLE, N_("focal length in mm for radius adjustment"), &com.pref.starfinder_conf.focal_length, { .range_double = { 0., 999999. } } },
 	{ "starfinder", "pixel_size", STYPE_DOUBLE, N_("pixel size in µm for radius adjustment"), &com.pref.starfinder_conf.pixel_size_x, { .range_double = { 0., 99. } } },
