@@ -79,6 +79,7 @@ v1.2.0 mmm dd, 2022
 * Fixed possible FITSEQ infinite loop and inconsistent numbering caused by hidden files in conversion
 * Fixed sequence closing in script processing after each command
 * Fixed opening of scientific FITS cube files
+* Fixed gnuplot call for macOS/AppImage, by making its path configurable
 
 v1.0.7 xx xx, 2022
 
